applied slot registration logic

--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
@@ -43,7 +43,7 @@
           {text}
         </div>
         <div class="citation__tooltip-actions" onclick={handleCitationActionClick}>
-          <slot name="citation-action"></slot>
+          <slot name="citation-action" onactionregister={handleCitationActionRegister}></slot>
         </div>
       </div>
     </c-quantic-tooltip>
