--- a/packages/quantic/force-app/examples/main/lwc/exampleQuanticNotifications/exampleQuanticNotifications.html
+++ b/packages/quantic/force-app/examples/main/lwc/exampleQuanticNotifications/exampleQuanticNotifications.html
@@ -8,7 +8,11 @@
     </div>
 
     <c-example-use-case slot="preview" use-case={config.useCase} engine-id={engineId}>
-      <c-quantic-notifications engine-id={engineId}></c-quantic-notifications>
+      <c-quantic-notifications engine-id={engineId}>
+        <c-custom-html-notification
+          slot="html-notification-template">
+        </c-custom-html-notification>
+      </c-quantic-notifications>
     </c-example-use-case>
   </c-example-layout>
 </template>
