made it turn blue when active

--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
@@ -24,7 +24,7 @@
       </template>
 
       <p
-        class="citation__title slds-m-left_x-small slds-truncate slds-has-flexi-truncate"
+        class={citationTitleClasses}
       >
         {citationTitle}
       </p>
