--- a/packages/quantic/force-app/main/default/lwc/quanticSourceCitations/quanticSourceCitations.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticSourceCitations/quanticSourceCitations.html
@@ -5,13 +5,18 @@
     >
     <ol class="slds-list_horizontal slds-wrap">
       <template for:each={indexedCitations} for:item="citation">
-        <c-quantic-citation
-          key={citation.data.id}
-          citation={citation.data}
-          interactive-citation={citation.interactiveCitation}
-          onquantic__citationhover={citation.handleCitationHover}
-          disable-citation-anchoring={disableCitationAnchoring}
-        ></c-quantic-citation>
+        <slot name="citation-component">
+          <c-quantic-citation
+            key={citation.data.id}
+            citation={citation.data}
+            interactive-citation={citation.interactiveCitation}
+            onquantic__citationhover={citation.handleCitationHover}
+            disable-citation-anchoring={disableCitationAnchoring}
+          >
+          <slot name="icon"></slot>
+          <slot name="action"></slot>
+        </c-quantic-citation>
+        </slot>
       </template>
     </ol>
   </template>
