--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
@@ -42,7 +42,7 @@
           {text}
         </div>
         <div>
-          <slot name="action"></slot>
+          <slot name="actions"></slot>
         </div>
       </div>
     </c-quantic-tooltip>
