Improved on original plan

--- a/packages/quantic/force-app/examples/main/lwc/exampleQuanticNotifications/exampleQuanticNotifications.html
+++ b/packages/quantic/force-app/examples/main/lwc/exampleQuanticNotifications/exampleQuanticNotifications.html
@@ -10,7 +10,7 @@
     <c-example-use-case slot="preview" use-case={config.useCase} engine-id={engineId}>
       <c-quantic-notifications engine-id={engineId}>
         <c-custom-html-notification
-          slot="html-notification-template">
+          slot="notification-renderer">
         </c-custom-html-notification>
       </c-quantic-notifications>
     </c-example-use-case>
