--- a/packages/atomic/dev/index.html
+++ b/packages/atomic/dev/index.html
@@ -149,7 +149,7 @@
   </head>
 
   <body>
-    <atomic-search-interface fields-to-include='["snrating", "sncost"]'>
+    <atomic-search-interface fields-to-include='["snrating", "sncost"]' pipeline='lvuAgentPanel'>
       <atomic-search-layout>
         <div class="header-bg"></div>
         <atomic-layout-section section="search">
