chore: seed all picsum pictures

--- a/packages/atomic/dev/themingTests.html
+++ b/packages/atomic/dev/themingTests.html
@@ -266,7 +266,7 @@
                 <template>
                   <atomic-result-section-actions><atomic-quickview></atomic-quickview></atomic-result-section-actions>
                   <atomic-result-section-visual image-size="small">
-                    <img loading="lazy" src="https://picsum.photos/350" class="thumbnail" />
+                    <img loading="lazy" src="https://picsum.photos/seed/picsum/350" class="thumbnail" />
                   </atomic-result-section-visual>
                   <atomic-result-section-title><atomic-result-link></atomic-result-link></atomic-result-section-title>
                   <atomic-result-section-excerpt
@@ -320,7 +320,7 @@
                   <atomic-result-section-actions><atomic-quickview></atomic-quickview></atomic-result-section-actions>
                   <atomic-result-section-visual>
                     <atomic-result-icon class="icon"></atomic-result-icon>
-                    <img loading="lazy" src="https://picsum.photos/350" class="thumbnail" />
+                    <img loading="lazy" src="https://picsum.photos/seed/picsum/350" class="thumbnail" />
                   </atomic-result-section-visual>
                   <atomic-result-section-badges>
                     <atomic-field-condition must-match-sourcetype="Salesforce">
