--- a/packages/atomic/dev/index.html
+++ b/packages/atomic/dev/index.html
@@ -228,7 +228,7 @@
           <atomic-layout-section section="results">
             <atomic-smart-snippet></atomic-smart-snippet>
             <atomic-smart-snippet-suggestions></atomic-smart-snippet-suggestions>
-            <atomic-result-list display="table">
+            <atomic-result-list>
               <atomic-result-template must-match-sourcetype="YouTube">
                 <template>
                   <atomic-result-section-actions><atomic-quickview></atomic-quickview></atomic-result-section-actions>
