added actions slot

--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.html
@@ -47,6 +47,9 @@
         >
           {text}
         </div>
+        <div>
+          <slot name="actions"></slot>
+        </div>
       </div>
     </c-quantic-tooltip>
   </li>
