change fix for overflow x clip

--- a/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.html
@@ -15,8 +15,6 @@
             data-testid="tab-bar_more-button"
             class="slds-button slds-var-p-horizontal_small tab-bar__more-button"
             aria-haspopup="true"
-            aria-expanded={isDropdownOpen}
-            type="button"
             onclick={toggleDropdown}
             name={labels.more}
           >
@@ -42,13 +40,12 @@
                     class="slds-size_1-of-1 slds-button slds-tabs_default__item"
                     role="menuitem"
                     tabindex={optionTabIndex}
-                    type="button"
                     onclick={handleDropdownTabSelect}
                     data-value={tab.value}
                     data-label={tab.label}
                     onblur={onBlur}
                   >
-                    <span class="slds-tabs_default__link" title={tab.label}
+                    <span class="slds-tabs_default__link slds-truncate" title={tab.label}
                       >{tab.label}</span
                     >
                   </button>
