fix(quantic): HIP overflows to the right issue (#6940)

--- a/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.html
@@ -45,7 +45,7 @@
                     data-label={tab.label}
                     onblur={onBlur}
                   >
-                    <span class="slds-tabs_default__link" title={tab.label}
+                    <span class="tab-bar__dropdown-tab slds-tabs_default__link slds-truncate" title={tab.label}
                       >{tab.label}</span
                     >
                   </button>
