new controller integrated with atomic

--- a/packages/atomic/dev/examples/genqa.html
+++ b/packages/atomic/dev/examples/genqa.html
@@ -115,7 +115,7 @@
           </atomic-facet-manager>
         </atomic-layout-section>
         <atomic-layout-section section="main">
-          <atomic-generated-answer></atomic-generated-answer>
+          <atomic-generated-answer agent-id="fc581be0-6e61-4039-ab26-a3f2f52f308f"></atomic-generated-answer>
           <atomic-layout-section section="status">
             <atomic-breadbox></atomic-breadbox>
             <atomic-query-summary></atomic-query-summary>
