--- a/packages/atomic/dev/examples/genqa.html
+++ b/packages/atomic/dev/examples/genqa.html
@@ -115,7 +115,11 @@
           </atomic-facet-manager>
         </atomic-layout-section>
         <atomic-layout-section section="main">
-          <atomic-generated-answer></atomic-generated-answer>
+          <atomic-generated-answer>
+            <div slot="no-answer-message">
+              We could not find a reliable answer, Sorry!
+            </div>
+          </atomic-generated-answer>
           <atomic-layout-section section="status">
             <atomic-breadbox></atomic-breadbox>
             <atomic-query-summary></atomic-query-summary>
